# s-p2026

./: .gitignore  README.md  README_AgentSpec.md  pyproject.toml  query.prop  requirement.txt
benchmarks/ToolEmu/: all_cases.json
expres/embodied/: a.py  analyze.py  controller.py  detail_evaluate.py  h.jsonl  safe_controlled_records.jsonl  safe_controlled_records_eval.jsonl  safe_records.jsonl  safe_records_eval.jsonl  stat.jsonl  unsafe_agent_records.jsonl  unsafe_agent_recors_eval.jsonl  unsafe_controlled_records.jsonl  unsafe_controlled_records_eval.jsonl  unsafe_detailed_traj_ground_truth.jsonl
expres/toolemu/: gpt4o-no_controll.jsonl  gpt4o-no_controll_eval_agent_help.jsonl  gpt4o-no_controll_eval_agent_safe.jsonl
prism/lib/: libdd.dylib  libdv.dylib  libjdd.dylib  libodd.dylib  libprismhybrid.dylib  libprismmtbdd.dylib  libprismsparse.dylib
src/: Final_Per-Task_Comparison_with_Correct_After_Tokens.csv  aaa  code_agent.py  default_av.dtmcabstraction.json  default_av.dtmcdtmc.prism  default_av.dtmcmodel.json  embodied_agent.py  log  log_agentspec  low_level_controller.py  run.sh
src/agentspec/: agent.py  controlled_agent_excector.py  controlled_emulation_executor.py  demos.py  enforcement.py  gen.py  interpreter.py  rule.py  state.py
src/agentspec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/log_safereach/: av_eval_prism_paper.json  av_summary.json  embodied_summary.json  mdp_stl_diagnostic_report.csv  mdp_stl_diagnostic_report.json  paper_full_comparison.csv  paper_metrics_summary.json  paper_perlaw_comparison.csv  (+21 more)
(+5004 files in other folders)
